RESOLVED FIXED183927
[WPE][GTK] Fix -Wswitch warnings after r229778
https://bugs.webkit.org/show_bug.cgi?id=183927
Summary [WPE][GTK] Fix -Wswitch warnings after r229778
Michael Catanzaro
Reported 2018-03-22 18:25:01 PDT
Fix -Wswitch warnings after r229778 (Carlos, please review)
Attachments
Patch (2.24 KB, patch)
2018-03-22 18:36 PDT, Michael Catanzaro
no flags
Archive of layout-test-results from ews206 for win-future (12.22 MB, application/zip)
2018-03-22 20:58 PDT, EWS Watchlist
no flags
Michael Catanzaro
Comment 1 2018-03-22 18:36:23 PDT
EWS Watchlist
Comment 2 2018-03-22 18:38:57 PDT
Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See http://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
EWS Watchlist
Comment 3 2018-03-22 20:58:29 PDT
Comment on attachment 336343 [details] Patch Attachment 336343 [details] did not pass win-ews (win): Output: http://webkit-queues.webkit.org/results/7070233 New failing tests: http/tests/preload/download_resources.html
EWS Watchlist
Comment 4 2018-03-22 20:58:40 PDT
Created attachment 336353 [details] Archive of layout-test-results from ews206 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: ews206 Port: win-future Platform: CYGWIN_NT-6.1-2.9.0-0.318-5-3-x86_64-64bit
WebKit Commit Bot
Comment 5 2018-03-23 00:56:12 PDT
Comment on attachment 336343 [details] Patch Clearing flags on attachment: 336343 Committed r229885: <https://trac.webkit.org/changeset/229885>
WebKit Commit Bot
Comment 6 2018-03-23 00:56:14 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.