[WPE][GTK] Fix -Wswitch warnings after r229778 https://bugs.webkit.org/show_bug.cgi?id=183927

Reviewed by Carlos Garcia Campos.

* NetworkProcess/soup/NetworkDataTaskSoup.cpp:
(WebKit::NetworkDataTaskSoup::dispatchDidReceiveResponse): Log a warning if Suspend is
received as a PolicyAction
* UIProcess/API/glib/WebKitNavigationClient.cpp: Ignore the ProcessSwap termination reason,
which should be invisible to WebKit clients


Canonical link: https://commits.webkit.org/199520@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@229885 268f45cc-cd09-0410-ab3c-d52691b4dbfc